--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <!-- Creating ajax request -->
 
     <script>
-          function ajax_request (create_new_student){
+          function ajax_request (req){
             //   alert('workin fine');
             
              var student_name =document.getElementById('student-name').value;
              var student_subject=document.getElementById('student-subject').value;
              var student_fees=document.getElementById('student-fees').value;
 
-             if(create_new_student == undefined){
-                create_new_student='';
+             if(req == undefined){
+                req='';
              }
 
              if(student_name ==''){
@@ -42,7 +42,7 @@
 
                   }
               }
-              xmlhttp.open('GET','data.php?add_req='+create_new_student+'&stu_name='+student_name+
+              xmlhttp.open('GET','data.php?req='+req+'&stu_name='+student_name+
               '&stu_subject='+student_subject+'&stu_fee='+student_fees,true);
               xmlhttp.send();
           }
